# openhcs-napari-roi-manager

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_roi_manager/: _dataclasses.py
src/napari_roi_manager/_tests/: test_widget.py
src/napari_roi_manager/ij/: _convert.py
src/napari_roi_manager/widgets/: _roi_manager.py
src/openhcs_napari_roi_manager/: __init__.py  _dataclasses.py  napari.yaml
src/openhcs_napari_roi_manager/_tests/: test_widget.py
src/openhcs_napari_roi_manager/ij/: _convert.py
src/openhcs_napari_roi_manager/widgets/: _dialogs.py  _roi_manager.py
